# discord-reasoning-bot

./: README.md
bun/: .env.example  Dockerfile  docker-compose.yml  index.ts  package-lock.json  package.json
go/: .envrc.example  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go  openai.go
node/: .env.example  .gitignore  Dockerfile  docker-compose.yml  index.ts  package.json  pnpm-lock.yaml
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust/src/: main.rs  state.rs
rust/src/api/: routes.rs
rust/src/handlers/: discord.rs
rust/src/services/: moderation.rs
