[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
async-openai = "0.24"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
